# dynamic-topo

./: .gitignore  CHANGELOG.md  Dockerfile.backend  README.md  main.py  pyproject.toml  requirements.txt
.gitea/workflows/: deploy.yml
deploy/: .env.example  README.md  compose.sh  docker-compose.prod.yml
docs/: link_policy.example.json  monitor_fault_injection_joint_spec_v1.md  monitor_frontend_gitflow_plan.md  monitor_frontend_visual_mapping.md  monitor_identity_mapping_spec.md  node_mapping_300.README.md  node_mapping_300.csv
docs/issues/: 2026-03-06-topology-delivery-automation.md  2026-03-10-star300lite-control-plane-automation.md  2026-03-11-star300lite-route-snapshot-frontend.md  2026-03-11-star300lite-route-visual-focus.md
dynamic_topo/: __init__.py  engine.py  link_policy.py  stream_server.py
frontend/: nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/monitor/: adapter.js  adapter.test.js  client.js  client.test.js  types.js
scripts/: generate_node_mapping.py  push_sim_policy.py  push_static_routes.py  restore_sim_datapath.py  start_star300lite_control_plane.sh  stop_star300lite_control_plane.sh
tests/: test_topology.py
tests/fixtures/: topology_snapshot.json
