[project]
name = "dynamic-topo"
version = "0.1.0"
description = "300-node dynamic topology simulation and Redis topology streaming"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyproj",
    "redis",
    "skyfield",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
